--- a/member/code-for-song-view.html
+++ b/member/code-for-song-view.html
@@ -13,7 +13,7 @@
 
     <title>기타의 시작은 C코드에서부터</title>
 
-    <script src="../js/jquery-1.12.4.min.js"></script>
+    <script src="./js/jquery-1.12.4.min.js"></script>
     <script src="../js/jquery-ui.min.js"></script>
     <script src="../js/swiper.min.js"></script>
     <link rel="stylesheet" href="../js/swiper.min.css">
@@ -69,15 +69,53 @@
         </div>
 
     </div>
-    <style>
-    .header.autofix_sb {
-        position: fixed;
-        width: 100%;
-        z-index: 9999;
-    }
-    </style>
     <script>
-    $(document).ready(function() {
-        $(".header").autofix_anything();
-    });
+        $(document).ready(function () {
+            $(".header").autofix_anything();
+        });
     </script>
+
+    <div class="contents-wrap">
+        <div class="contents-box">
+            <div class="title">
+                <h1>흔들리는 꽃들속에서 너의 샴푸향이 느껴진거야</h1>
+                <p>장범준</p>
+            </div>
+            <div class="code-song-img">
+                <img src="../img/code-song/I could smell your shampoo in the swaying flowers..png" alt="">
+            </div>
+            <div class="code-img">
+                <ul>
+                    <li><img src="../img/code/C.PNG" alt=""></li>
+                    <li><img src="../img/code/G.PNG" alt=""></li>
+                    <li><img src="../img/code/Am7.PNG" alt=""></li>
+                    <li><img src="../img/code/Fmaj7.PNG" alt=""></li>
+                    <li><img src="../img/code/Em7.PNG" alt=""></li>
+                    <li><img src="../img/code/Dm7.PNG" alt=""></li>
+                </ul>
+            </div>
+            <div class="info">
+                <p>6개의 기본 코드로 쉽게 연습할 수 있는 곡입니다.</p>
+            </div>
+        </div>
+    </div>
+
+
+    <!--하단 정보-->
+    <div class="footer">
+        <div>
+            <div class="f-logo">
+                <h1><a href="../index.html"><img src="../img/logo.png" alt=""><span>기타의 시작은 C코드에서부터</span></a></h1>
+            </div>
+            <div class="f-copy">
+                <p>copyright(c) 기타의 시작은 C코드에서부터. All Rights Reserved</p>
+            </div>
+        </div>
+
+    </div>
+    <script>
+        AOS.init();
+    </script>
+</body>
+
+</html>
