--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <h1><a href="./index.html"><img src="./img/logo.png" alt=""></a></h1>
             <div class="tnb">
                 <ul>
-                    <li><a href="#none">로그인</a></li>
-                    <li><a href="#none">회원가입</a></li>
+                    <li><a href="./login.html">로그인</a></li>
+                    <li><a href="./join.html">회원가입</a></li>
                     <li><a href="./booking/list.html">예약하기</a></li>
                     <li><a href="./booking/check.html">예약확인</a></li>
                     <!--
